crates/forge-codegen/tests/snapshots/snapshot__full_app.snap
---
source: crates/forge-codegen/tests/snapshot.rs
expression: "run_fixture(include_str!(\"fixtures/full_app.rs.txt\"), false)"
---

=== ts/api.ts ===
// @generated by FORGE - DO NOT EDIT

import { getForgeClient, createSubscriptionStore, createJobStore, createWorkflowStore } from "@forge-rs/svelte";
import type {
  CleanupOutput,
  CleanupRequest,
  CreateTodoInput,
  ReportInput,
  ReportOutput,
  Todo,
  TodoStatus,
} from "./types";

// Queries
export const countByStatus = (args: { status: TodoStatus }): Promise<number> =>
  getForgeClient().call("count_by_status", args);
export const listMyTodos = (): Promise<Todo[]> =>
  getForgeClient().call("list_my_todos", null);

// Subscriptions
export const countByStatusStore$ = (args: { status: TodoStatus }) =>
  createSubscriptionStore<{ status: TodoStatus }, number>("count_by_status", args);
export const listMyTodosStore$ = () =>
  createSubscriptionStore<null, Todo[]>("list_my_todos", null);

// Mutations
export const createTodo = (args: CreateTodoInput): Promise<Todo> =>
  getForgeClient().call("create_todo", args);
export const deleteTodo = (args: { id: string }): Promise<boolean> =>
  getForgeClient().call("delete_todo", args);

// Jobs
export const trackCleanupOldTodos = (args: { request: CleanupRequest }) =>
  createJobStore<{ request: CleanupRequest }, CleanupOutput>("cleanup_old_todos", args);

// Workflows
export const trackBuildReport = (args: ReportInput) =>
  createWorkflowStore<ReportInput, ReportOutput>("build_report", args);

=== ts/index.ts ===
// @generated by FORGE - DO NOT EDIT
export * from './types';
export * from './api';
export * from './stores';
export * from './runes.svelte';
export * from './reactive.svelte';
export { ForgeClient, ForgeClientError, createForgeClient, ForgeProvider } from '@forge-rs/svelte';

=== ts/reactive.svelte.ts ===
// @generated by FORGE - DO NOT EDIT

import { countByStatusStore$, listMyTodosStore$, createTodo, deleteTodo } from "./api";
import { toReactive, type ReactiveQuery, toReactiveMutation, type ReactiveMutation } from "./runes.svelte";
import type { CreateTodoInput, Todo, TodoStatus } from "./types";
export const countByStatus$ = (args: { status: TodoStatus }): ReactiveQuery<number> =>
  toReactive(countByStatusStore$(args));
export const listMyTodos$ = (): ReactiveQuery<Todo[]> =>
  toReactive(listMyTodosStore$());
export const createTodo$ = (): ReactiveMutation<CreateTodoInput, Todo> =>
  toReactiveMutation(createTodo);
export const deleteTodo$ = (): ReactiveMutation<{ id: string }, boolean> =>
  toReactiveMutation(deleteTodo);

=== ts/runes.svelte.ts ===
// @generated by FORGE - DO NOT EDIT
import type { SubscriptionStore, ForgeError } from "@forge-rs/svelte";
import type { SubscriptionResult } from "@forge-rs/svelte";
import { ForgeClientError } from "@forge-rs/svelte";

export interface ReactiveQuery<T> extends SubscriptionResult<T> {
  unsubscribe: () => void;
}

export function toReactive<T>(store: SubscriptionStore<T>): ReactiveQuery<T> {
  const state: ReactiveQuery<T> = $state({
    loading: true,
    data: null,
    error: null,
    stale: false,
    unsubscribe: () => {},
  });

  $effect(() => {
    const unsubCallback = store.subscribe((s) => {
      state.loading = s.loading;
      state.data = s.data;
      state.error = s.error;
      state.stale = s.stale;
    });

    const cleanup = () => {
      unsubCallback();
      store.unsubscribe();
    };

    state.unsubscribe = cleanup;
    return cleanup;
  });

  return state;
}

export interface ReactiveMutation<TArgs, TResult> {
  mutate: (args: TArgs) => Promise<TResult>;
  pending: boolean;
  error: ForgeError | null;
}

export function toReactiveMutation<TArgs, TResult>(
  fn: (args: TArgs) => Promise<TResult>,
): ReactiveMutation<TArgs, TResult> {
  const state: ReactiveMutation<TArgs, TResult> = $state({
    mutate: async (args: TArgs) => {
      state.pending = true;
      state.error = null;
      try {
        return await fn(args);
      } catch (e) {
        const err =
          e instanceof ForgeClientError
            ? e
            : new ForgeClientError("UNKNOWN", String(e));
        state.error = err;
        throw e;
      } finally {
        state.pending = false;
      }
    },
    pending: false,
    error: null,
  });
  return state;
}

=== ts/stores.ts ===
// @generated by FORGE - DO NOT EDIT
export {
  getForgeClient,
  createConnectionStore,
  createQueryStore,
  createSubscriptionStore,
  createJobStore,
  createWorkflowStore,
} from '@forge-rs/svelte';
export type {
  Readable,
  ConnectionStatusStore,
  QueryStore,
  SubscriptionStore,
  JobStore,
  WorkflowStore,
} from '@forge-rs/svelte';

=== ts/types.ts ===
// @generated by FORGE - DO NOT EDIT

export interface CleanupOutput {
  deleted_count: number;
}

export interface CleanupRequest {
  older_than_days: number;
}

export interface CreateTodoInput {
  title: string;
  status: TodoStatus;
}

export interface ReportInput {
  user_id: string;
}

export interface ReportOutput {
  url: string;
}

export interface Todo {
  id: string;
  user_id: string;
  title: string;
  status: TodoStatus;
  due_at?: string;
  created_at: string;
}

export type Cursor = string;

export interface PageInfo {
  has_next_page: boolean;
  end_cursor?: Cursor;
  total_count?: number;
}

export interface Page<T> {
  items: T[];
  page_info: PageInfo;
}

export type TodoStatus = 'open' | 'in_progress' | 'done';

export type { ForgeError, QueryResult, SubscriptionResult } from "@forge-rs/svelte";

=== dioxus/api.rs ===
// @generated by FORGE - DO NOT EDIT

#![allow(dead_code, unused_imports, clippy::redundant_field_names, clippy::too_many_arguments, clippy::wrong_self_convention)]

use forge_dioxus::{
    ForgeClient, ForgeClientError, Mutation, QueryState,
    SubscriptionState, JobExecutionState, TokenPair, WorkflowExecutionState,
};

use super::types::*;
use super::{
    use_forge_query, use_forge_subscription,
    use_forge_mutation, use_forge_job, use_forge_workflow,
};

#[derive(Debug, Clone, PartialEq, serde::Serialize)]
pub struct CountByStatusParams {
    pub status: TodoStatus,
}
impl CountByStatusParams {
    pub fn new(status: TodoStatus) -> Self {
        Self {
            status,
        }
    }
}

pub async fn count_by_status(client: &ForgeClient, args: CountByStatusParams) -> Result<i64, ForgeClientError> {
    client.call("count_by_status", args).await
}

pub fn use_count_by_status(args: CountByStatusParams) -> QueryState<i64> {
    use_forge_query("count_by_status", args)
}

pub fn use_count_by_status_subscription(args: CountByStatusParams) -> SubscriptionState<i64> {
    use_forge_subscription("count_by_status", args)
}
pub async fn list_my_todos(client: &ForgeClient) -> Result<Vec<Todo>, ForgeClientError> {
    client.call("list_my_todos", ()).await
}

pub fn use_list_my_todos() -> QueryState<Vec<Todo>> {
    use_forge_query("list_my_todos", ())
}

pub fn use_list_my_todos_subscription() -> SubscriptionState<Vec<Todo>> {
    use_forge_subscription("list_my_todos", ())
}
pub async fn create_todo(client: &ForgeClient, args: CreateTodoInput) -> Result<Todo, ForgeClientError> {
    client.call("create_todo", args).await
}

pub fn use_create_todo() -> Mutation<CreateTodoInput, Todo> {
    use_forge_mutation("create_todo")
}
#[derive(Debug, Clone, PartialEq, serde::Serialize)]
pub struct DeleteTodoParams {
    pub id: String,
}
impl DeleteTodoParams {
    pub fn new(id: impl Into<String>) -> Self {
        Self {
            id: id.into(),
        }
    }
}

pub async fn delete_todo(client: &ForgeClient, args: DeleteTodoParams) -> Result<bool, ForgeClientError> {
    client.call("delete_todo", args).await
}

pub fn use_delete_todo() -> Mutation<DeleteTodoParams, bool> {
    use_forge_mutation("delete_todo")
}
#[derive(Debug, Clone, PartialEq, serde::Serialize)]
pub struct CleanupOldTodosParams {
    pub request: CleanupRequest,
}
impl CleanupOldTodosParams {
    pub fn new(request: CleanupRequest) -> Self {
        Self {
            request,
        }
    }
}

pub fn use_cleanup_old_todos(args: CleanupOldTodosParams) -> JobExecutionState<CleanupOutput> {
    use_forge_job("cleanup_old_todos", args)
}
pub fn use_build_report(args: ReportInput) -> WorkflowExecutionState<ReportOutput> {
    use_forge_workflow("build_report", args)
}

=== dioxus/mod.rs ===
// @generated by FORGE - DO NOT EDIT

#![allow(dead_code, unused_imports)]

pub mod api;
pub mod types;

pub use api::*;
pub use forge_dioxus::{
    ConnectionState, ForgeAuth, ForgeAuthProvider, ForgeClient, ForgeClientConfig,
    ForgeClientError, ForgeError, ForgeProvider, ForgeUpload, JobExecutionState, Mutation,
    QueryState, SignalError, SubscriptionHandle, SubscriptionState, TokenPair, WorkflowExecutionState,
    use_auth_key, use_connection_state, use_forge_auth, use_forge_client, use_forge_job,
    use_forge_mutation, use_forge_query, use_forge_subscription, use_forge_workflow,
    use_viewer,
};
pub use types::*;

=== dioxus/types.rs ===
// @generated by FORGE - DO NOT EDIT

#![allow(dead_code, unused_imports, clippy::too_many_arguments)]

use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
pub struct CleanupOutput {
    pub deleted_count: i64,
}

impl CleanupOutput {
    pub fn new(deleted_count: i64) -> Self {
        Self {
            deleted_count,
        }
    }
}

#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
pub struct CleanupRequest {
    pub older_than_days: i32,
}

impl CleanupRequest {
    pub fn new(older_than_days: i32) -> Self {
        Self {
            older_than_days,
        }
    }
}

#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
pub struct CreateTodoInput {
    pub title: String,
    pub status: TodoStatus,
}

impl CreateTodoInput {
    pub fn new(title: impl Into<String>, status: TodoStatus) -> Self {
        Self {
            title: title.into(),
            status,
        }
    }
}

#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
pub struct ReportInput {
    pub user_id: String,
}

impl ReportInput {
    pub fn new(user_id: impl Into<String>) -> Self {
        Self {
            user_id: user_id.into(),
        }
    }
}

#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
pub struct ReportOutput {
    pub url: String,
}

impl ReportOutput {
    pub fn new(url: impl Into<String>) -> Self {
        Self {
            url: url.into(),
        }
    }
}

#[derive(Debug, Clone, PartialEq, Serialize, Deserialize)]
pub struct Todo {
    pub id: String,
    pub user_id: String,
    pub title: String,
    pub status: TodoStatus,
    pub due_at: Option<String>,
    pub created_at: String,
}

#[derive(Debug, Clone, PartialEq, Eq, Serialize, Deserialize)]
#[serde(rename_all = "snake_case")]
pub enum TodoStatus {
    Open,
    InProgress,
    Done,
}
